--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,28 @@
         android:theme="@style/Theme.ExchangeLibrary"
         tools:targetApi="31" >
         <activity
+            android:name=".ChatActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+<!--                 <category android:name="android.intent.category.LAUNCHER" />-->
+            </intent-filter>
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".HomeActivity"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-            </intent-filter>>
+                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
